<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Emotions</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings"><u>Settings</u></string>
    <string name="title_activity_start_screen">StartScreen</string>
    <string name="answer">Answer</string>
    
    <string name="moment">At the Moment I Am </string>
    <string name="happy">Happy</string>
    <string name="relaxed">Relaxed</string>
    <string name="angry">Angry</string>
    <string name="stressed">Stressed</string>
    <string name="anxious">Anxious</string> 
    <string name="depressed">Depressed</string>
    
    <string name="since">Since the previous signal I</string>
    
    <string name="accept">have allowed or accepted my feelings (acceptance)</string>
    <string name="reprise">have changed the way I think about what caused my feelings (reappraisal)</string>
    <string name="critisim">criticised myself for my feelings (self-criticism)</string>
    <string name="rumination">couldn’t stop thinking about my feelings (rumination)</string>
    <string name="sharing">have talked about my feelings with others (social sharing)</string>
    <string name="expsup">have avoided expressing my emotions (expression suppression)</string>
    <string name="distraction">have engaged in activities to distract myself from my feelings (distraction)</string>
    <string name="problem">have come up with ideas to fix or change the problem that caused my feelings (problem-solving)</string>
    <string name="felsup">have pushed my feelings down or put them out of my mind (feeling suppression)</string>
    
    <string name="wantp">have wanted my pleasant feelings to…</string>
    <string name="wantu">have wanted my unpleasant feelings to…</string>
    <string name="wantc">have wanted to control my feelings so that I can achieve some other goal</string>
    
    <string name="welcome">Welcome to Emotions</string>
    <string name="welcome2">Touch Answer when ready to begin</string>
    <string name="test">Test Button</string>
    <string name="sInt">Set Interval</string>
    <string name="disRes">Display Results</string>
    <string name="email">Email Results</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string-array name="choices">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="choicesTen">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
    
</resources>
